--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,8 @@
         <!-- Search bar -->
         <div>
           <div id="maindiv">
-            <span id="text"><img src="search.png"></span>
-            <span id="inputspan"></span>
+            <span id="search"><img src="search.png"></span>
+            <span id="text"></span>
             <button id="mic" onclick="mySpeechRecognition()"></span>
           </div>
         </div>
