cambios para plantillas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- This link tag is used to link html file with css file -->
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="/frontend/style.css"
     <title></title>
   </head>
 
@@ -13,7 +13,7 @@
       <div id="navdiv">
         <a href="https://www.google.com/gmail/about/#" class="c">Gmail</a>
         <a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl" class="c">Images</a>
-        <div><img src="menu.png"></div>
+        <div><img src=""></div>
         <div><button type="submit" name="button">Sign In</button></div>
       </div>
     </nav>
@@ -21,7 +21,7 @@
     <!-- Main body of google -->
     <main>
       <center>
-        <img src="images/logo.png" width="20%" height="5%" id="googleimg">
+        <img src="/frontend/images/logo.png" width="20%" height="5%" id="googleimg">
         <!-- Search bar -->
         <div>
           <div id="maindiv">
@@ -41,7 +41,7 @@
 
         </div>
       </center>
-      <script src="script.js"></script>
+      <script src="/frontend/script.js"></script>
     </main>
   </body>
 </html>
