Sustitución de imagen y creacion de style1.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <!-- This link tag is used to link html file with css file -->
-    <link rel="stylesheet" href="/frontend/style.css"
+    <link rel="stylesheet" href="/frontend/style.css">
+    <link rel="stylesheet" href="/frontend/style1.css">
     <title></title>
   </head>
 
@@ -21,7 +22,7 @@
     <!-- Main body of google -->
     <main>
       <center>
-        <img src="/frontend/images/logo.png" width="20%" height="5%" id="googleimg">
+        <img src="/frontend/images/Ai2DB.jpg" width="20%" height="5%" id="googleimg">
         <!-- Search bar -->
         
           
