Se ha modificado la web

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <!-- This link tag is used to link html file with css file -->
     <link rel="stylesheet" href="/frontend/style.css">
-    <link rel="stylesheet" href="/frontend/style1.css">
     <title></title>
   </head>
 
@@ -12,10 +11,12 @@
     <!--Nav tag is used here for navigation bar at top right corner -->
     <nav>
       <div id="navdiv">
-        <a href="https://www.google.com/gmail/about/#" class="c">Gmail</a>
-        <a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl" class="c">Images</a>
-        <div><img src=""></div>
-        <div><button type="submit" name="button">Sign In</button></div>
+        <ul>
+          <li><a href="https://www.google.com/gmail/about/#" class="c">Gmail</a></li>
+          <li><a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl" class="c">Images</a></li>
+          <!--<div><img src=""></div>-->
+          <li><div><button type="submit" name="button">Sign In</button></div></li>
+        </ul>
       </div>
     </nav>
     <!--End of navigation -->
