Cambios de interfaz

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <nav>
       <div id="navdiv">
         <ul>
+          <li><a href="/frontend/analisis.html" class="c">Analisis</a></li>
           <li><a href="https://www.google.com/gmail/about/#" class="c">Gmail</a></li>
           <li><a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl" class="c">Images</a></li>
           <!--<div><img src=""></div>-->
