--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <nav>
       <div id="navdiv">
         <ul>
-          <li><a href="/frontend/analisis.html" class="c">Analisis</a></li>
+          <li><a href="/frontend/analisis.html" class="c">¿Por qué SQL?</a></li>
           <li><a href="https://www.google.com/gmail/about/#" class="c">Gmail</a></li>
           <li><a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl" class="c">Images</a></li>
           <!--<div><img src=""></div>-->
@@ -24,7 +24,7 @@
     <!-- Main body of google -->
     <main>
       <center>
-        <img src="/frontend/images/Ai2DB.jpg" width="20%" height="5%" id="googleimg">
+        <img src="/frontend/images/Ai2DB_sin_fondo.png" width="20%" height="5%" id="googleimg">
         <!-- Search bar -->
         
           
