Modificacion de main

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,11 +35,11 @@
             <button id="mic" onclick="mySpeechRecognition()">
           </div>
           <section>
-            <div><a href="https://es.wikipedia.org/wiki/Inteligencia_artificial">Info y tal</a></div>
-            <div><button type="submit">Hacer solicitud</button></div>
+            <div><a href="https://es.wikipedia.org/wiki/Inteligencia_artificial" class="URL">Info y tal</a></div>
+            <div><button type="submit" class="URL">Hacer solicitud</button></div>
           </section>
         </form>
-        <div><a href="">Work, learn and run your bussiness from home</a></div>
+        <div><a href="" class="URL">Work, learn and run your bussiness from home</a></div>
         <div id="Bottomdiv">
         </div>
         
