--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,7 @@
         </div>
         
         {% if data %}
+        PROMPT: {{ prompt }}
         <table>
           <tr>
           {% for header in headings %}
