--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- This link tag is used to link html file with css file -->
     <link rel="stylesheet" href="/frontend/style.css">
     <title></title>
