--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,12 +31,13 @@
           
         <form action="/" method="get">
           <div id="maindiv">
-            <span id="search"><img src="search.png"></span>
-            <input type="text" name="prompt" id="text">
-            <button id="mic" onclick="mySpeechRecognition()">
+            <!-- <span id="search"><img src="search.png"></span> -->
+            &nbsp;&nbsp;&nbsp;
+            <input type="text" name="prompt" id="text" placeholder="¿Qué quieres saber?" style="outline: none">
+            <span><button id="mic" onclick="mySpeechRecognition()" style="outline: none"> <img src="/frontend/images/mic.png" height="100%" ></button></span>
           </div>
           <section>
-            <div><a href="https://es.wikipedia.org/wiki/Inteligencia_artificial" class="URL">Info y tal</a></div>
+            <div><a href="https://es.wikipedia.org/wiki/Inteligencia_artificial" class="URL">Info</a></div>
             <div><button type="submit" class="URL">Hacer solicitud</button></div>
           </section>
         </form>
@@ -63,11 +64,11 @@
         {% endif %}
 
         <!--  Esto es para hacer pruebas para subir el csv !-->
-        <h2>Enviar archivo CSV</h2>
+        <!-- <h2>Enviar archivo CSV</h2>
         <form action="/uploadfile/" method="post" enctype="multipart/form-data">
             <input type="file" name="file">
-            <br><br>
-            <input type="submit" value="Enviar archivo">
+            <br><br> -->
+            <!-- <input type="submit" value="Enviar archivo"> -->
         </form>
 
       </center>
