--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- This link tag is used to link html file with css file -->
-    <link rel="stylesheet" href="/frontend/style.css">
+    <link rel="stylesheet" href="/Users/miran/Desktop/ai2db-master/frontend/style.css">
     <title></title>
   </head>
 
@@ -13,7 +13,7 @@
     <nav>
       <div id="navdiv">
         <ul>
-          <li><a href="/frontend/analisis.html" class="shadow__btn">¿Por qué SQL?</a></li>
+          <li><a href="/Users/miran/Desktop/ai2db-master/frontend/analisis.html" class="shadow__btn">¿Por qué SQL?</a></li>
           <!--<div><img src=""></div>-->
         </ul>
       </div>
@@ -22,7 +22,7 @@
     <!-- Main body of google -->
     <main>
       <center>
-        <img src="/images/Ai2DB_sin_fondo.png" width="20%" height="5%" id="googleimg">
+        <img src="/Users/miran/Desktop/ai2db-master/frontend/images/Ai2DB_sin_fondo.png" width="20%" height="5%" id="googleimg">
         <!-- Search bar -->
         
           
@@ -31,15 +31,15 @@
             <!-- <span id="search"><img src="search.png"></span> -->
             &nbsp;&nbsp;&nbsp;
             <input placeholder="¿Que quieres saber?" class="input" name="prompt" id="text" type="text">
-            <span><button id="mic" onclick="mySpeechRecognition()" style="outline: none"> <img src="/frontend/images/mic.png" height="100%" ></button></span>
+            <span><button2 id="button2" onclick="mySpeechRecognition()" style="outline: none"> <img src="/Users/miran/Desktop/ai2db-master/frontend/images/mic.png" height="100%" ></button2></span>
           </div>
           <section>
-            <div><button2 href="https://es.wikipedia.org/wiki/Inteligencia_artificial" class="button2">INFO
+            <div><button href="https://es.wikipedia.org/wiki/Inteligencia_artificial" class="button2">INFO
               <span2></span2>
-            </button2></div>
-            <div><button2 type="submit" class="button2">HACER SOLICITUD
+            </button></div>
+            <div><button type="submit" class="button2">HACER SOLICITUD
               <span2></span2>
-            </button2></div>
+            </button></div>
           </section>
         </form>
         <div id="Bottomdiv">
@@ -72,7 +72,12 @@
         </form>
 
       </center>
-      <script src="/frontend/script.js"></script>
+      <script src="/Users/miran/Desktop/ai2db-master/frontend/script.js"></script>
     </main>
   </body>
 </html>
+
+
+
+
+
